--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "fs-extra": "^9.0.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "dotenv": "^8.2.0",
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
